// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListOptimizer> that optimally renders list items should render full list on maximum height 1`] = `
<div
  style="overflow:visible;height:0;width:0"
>
  <div
    aria-label="grid"
    aria-readonly="true"
    class="ReactVirtualized__Grid ReactVirtualized__List"
    role="grid"
    style="box-sizing:border-box;direction:ltr;height:2000px;position:relative;width:10px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:hidden"
    tabindex="0"
  >
    <div
      class="ReactVirtualized__Grid__innerScrollContainer"
      role="rowgroup"
      style="width:auto;height:600px;max-width:10px;max-height:600px;overflow:hidden;pointer-events:;position:relative"
    >
      <span>
        Item 0
      </span>
      <span>
        Item 1
      </span>
      <span>
        Item 2
      </span>
      <span>
        Item 3
      </span>
      <span>
        Item 4
      </span>
      <span>
        Item 5
      </span>
      <span>
        Item 6
      </span>
      <span>
        Item 7
      </span>
      <span>
        Item 8
      </span>
      <span>
        Item 9
      </span>
      <span>
        Item 10
      </span>
      <span>
        Item 11
      </span>
      <span>
        Item 12
      </span>
      <span>
        Item 13
      </span>
      <span>
        Item 14
      </span>
      <span>
        Item 15
      </span>
      <span>
        Item 16
      </span>
      <span>
        Item 17
      </span>
      <span>
        Item 18
      </span>
      <span>
        Item 19
      </span>
    </div>
  </div>
</div>
`;

exports[`<ListOptimizer> that optimally renders list items should render part of list items due to middle height of block 1`] = `
<div
  style="overflow:visible;height:0;width:0"
>
  <div
    aria-label="grid"
    aria-readonly="true"
    class="ReactVirtualized__Grid ReactVirtualized__List"
    role="grid"
    style="box-sizing:border-box;direction:ltr;height:150px;position:relative;width:10px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:auto"
    tabindex="0"
  >
    <div
      class="ReactVirtualized__Grid__innerScrollContainer"
      role="rowgroup"
      style="width:auto;height:600px;max-width:10px;max-height:600px;overflow:hidden;pointer-events:;position:relative"
    >
      <span>
        Item 0
      </span>
      <span>
        Item 1
      </span>
      <span>
        Item 2
      </span>
      <span>
        Item 3
      </span>
      <span>
        Item 4
      </span>
      <span>
        Item 5
      </span>
      <span>
        Item 6
      </span>
      <span>
        Item 7
      </span>
      <span>
        Item 8
      </span>
      <span>
        Item 9
      </span>
      <span>
        Item 10
      </span>
      <span>
        Item 11
      </span>
      <span>
        Item 12
      </span>
      <span>
        Item 13
      </span>
      <span>
        Item 14
      </span>
    </div>
  </div>
</div>
`;

exports[`<ListOptimizer> that optimally renders list items should render small part of list due to small height of block 1`] = `
<div
  style="overflow:visible;height:0;width:0"
>
  <div
    aria-label="grid"
    aria-readonly="true"
    class="ReactVirtualized__Grid ReactVirtualized__List"
    role="grid"
    style="box-sizing:border-box;direction:ltr;height:10px;position:relative;width:10px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:auto"
    tabindex="0"
  >
    <div
      class="ReactVirtualized__Grid__innerScrollContainer"
      role="rowgroup"
      style="width:auto;height:600px;max-width:10px;max-height:600px;overflow:hidden;pointer-events:;position:relative"
    >
      <span>
        Item 0
      </span>
      <span>
        Item 1
      </span>
      <span>
        Item 2
      </span>
      <span>
        Item 3
      </span>
      <span>
        Item 4
      </span>
      <span>
        Item 5
      </span>
      <span>
        Item 6
      </span>
      <span>
        Item 7
      </span>
      <span>
        Item 8
      </span>
      <span>
        Item 9
      </span>
      <span>
        Item 10
      </span>
    </div>
  </div>
</div>
`;
